; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/opensrc/helpers/libfdt/extr_fdt_ro.c__nextprop.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/opensrc/helpers/libfdt/extr_fdt_ro.c__nextprop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FDT_ERR_BADSTRUCTURE = common dso_local global i32 0, align 4
@FDT_NOP = common dso_local global i32 0, align 4
@FDT_ERR_NOTFOUND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @_nextprop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_nextprop(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  br label %8

8:                                                ; preds = %25, %2
  %9 = load i8*, i8** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @fdt_next_tag(i8* %9, i32 %10, i32* %7)
  store i32 %11, i32* %6, align 4
  %12 = load i32, i32* %6, align 4
  switch i32 %12, label %23 [
    i32 129, label %13
    i32 128, label %21
  ]

13:                                               ; preds = %8
  %14 = load i32, i32* %7, align 4
  %15 = icmp sge i32 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %13
  %17 = load i32, i32* @FDT_ERR_BADSTRUCTURE, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %3, align 4
  br label %32

19:                                               ; preds = %13
  %20 = load i32, i32* %7, align 4
  store i32 %20, i32* %3, align 4
  br label %32

21:                                               ; preds = %8
  %22 = load i32, i32* %5, align 4
  store i32 %22, i32* %3, align 4
  br label %32

23:                                               ; preds = %8
  %24 = load i32, i32* %7, align 4
  store i32 %24, i32* %5, align 4
  br label %25

25:                                               ; preds = %23
  %26 = load i32, i32* %6, align 4
  %27 = load i32, i32* @FDT_NOP, align 4
  %28 = icmp eq i32 %26, %27
  br i1 %28, label %8, label %29

29:                                               ; preds = %25
  %30 = load i32, i32* @FDT_ERR_NOTFOUND, align 4
  %31 = sub nsw i32 0, %30
  store i32 %31, i32* %3, align 4
  br label %32

32:                                               ; preds = %29, %21, %19, %16
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i32 @fdt_next_tag(i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
